# GNR-Assignment-1

./: .gitignore  CMakeLists.txt  Makefile  README.md  install_ninja.ps1
configs/: cifar100_balanced.yaml  cifar100_config.yaml  cifar100_deep_config.yaml  cifar100_final.yaml  cifar100_final2.yaml  cifar100_resnet_config.yaml  cifar100_strided_fast.yaml  mnist.yaml  mnist_config.yaml  mnist_final.yaml  mnist_final2.yaml  mnist_high_acc_config.yaml  model_config.yaml  model_config_fast.yaml  model_config_simple.yaml
deepnet/bindings/: bindings.cpp
deepnet/cpp/include/: loss.hpp  tensor.hpp
deepnet/cpp/include/cuda/: cuda_ops.hpp
deepnet/cpp/include/layers/: batchnorm.hpp  layer.hpp  pooling.hpp
deepnet/cpp/include/optimizers/: optimizer.hpp  scheduler.hpp
deepnet/cpp/src/: loss.cpp  tensor.cpp
deepnet/cpp/src/cuda/: cuda_kernels.cu
deepnet/cpp/src/layers/: batchnorm.cpp  layer.cpp  pooling.cpp
deepnet/cpp/src/optimizers/: optimizer.cpp
deepnet/python/: data.py  models.py  module.py  utils.py
report/: report.aux  report.out  report.tex
scripts/: check_configs.py  debug_crash.py  debug_sequential.py  evaluate.py  test_all_layers.py  test_cuda.py  test_gradient.py  train.py
scripts/tests/: test_all_layers.py  test_cuda.py  test_cuda_ops.py  test_device_ops.py  test_gpu_integrity.py  test_gradient.py
utils/: __init__.py  metrics.py  visualization.py
